--- a/back_springboot/entity/pom.xml
+++ b/back_springboot/entity/pom.xml
@@ -2,34 +2,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <!-- 继承说明：这里继承SpringBoot提供的父工程 -->
+    <!--声明父模块-->
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.learning</groupId>
+        <artifactId>back_springboot</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath><!-- lookup parent from repository -->
     </parent>
-    <!-- 项目说明：这里作为聚合工程的父工程 -->
+    <!--entity 模块 pom.xml-->
     <groupId>com.learning</groupId>
-    <artifactId>back_springboot</artifactId>
+    <artifactId>entity</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <!-- 基本信息 -->
-    <name>back_springboot</name>
-    <description>在线技术支撑平台-springBoot端</description>
+    <name>entity</name>
+    <description>实体类</description>
     <!-- 配置信息 -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
     </properties>
-    <!--声明你有四个子模块 -->
-    <modules>
-        <module>entity</module>
-        <module>dao</module>
-        <module>service</module>
-        <module>web</module>
-    </modules>
     <!-- 引用 -->
     <dependencies>
         <dependency>
@@ -43,14 +34,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <!--<build>-->
-        <!--<plugins>-->
-            <!--<plugin>-->
-                <!--<groupId>org.springframework.boot</groupId>-->
-                <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
-            <!--</plugin>-->
-        <!--</plugins>-->
-    <!--</build>-->
-
 </project>
