--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,24 @@ target/
 !**/src/main/**
 !**/src/test/**
 
+.DS_Store
+node_modules/
+/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+*.iws
+*.iml
+*.ipr
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
 ### STS ###
 .apt_generated
 .classpath
@@ -13,12 +31,6 @@ target/
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
@@ -27,5 +39,3 @@ target/
 /.nb-gradle/
 build/
 
-### VS Code ###
-.vscode/
