--- a/front_vue/front_vue/package.json
+++ b/front_vue/front_vue/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "element-ui": "^2.10.1",
+    "eslint": "^6.1.0",
     "qs": "^6.7.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
