--- a/front_vue/front_vue/package.json
+++ b/front_vue/front_vue/package.json
@@ -15,6 +15,7 @@
     "eslint": "^6.1.0",
     "qs": "^6.7.0",
     "vue": "^2.5.2",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
