--- a/back_springboot/controller/pom.xml
+++ b/back_springboot/controller/pom.xml
@@ -81,6 +81,13 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <!-- 引用util -->
+        <dependency>
+            <groupId>com.learning</groupId>
+            <artifactId>util</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <!--打包插件-->
     <build>
