--- a/back_springboot/pom.xml
+++ b/back_springboot/pom.xml
@@ -29,6 +29,7 @@
         <module>dao</module>
         <module>service</module>
         <module>controller</module>
+        <module>util</module>
     </modules>
     <!-- 引用 -->
     <dependencies>
