--- a/backstage-spring/techonline-booter/src/main/resources/application.yml
+++ b/backstage-spring/techonline-booter/src/main/resources/application.yml
@@ -1,1 +1,11 @@
+server:
+  port: 14520
 
+## 开启swagger的basic认证功能
+swagger:
+  basic:
+    enable: true
+    ##认证用户名
+    username: Jaywatson
+    ##认证密码
+    password: 123456
