--- a/backstage-spring/techonline-authority/pom.xml
+++ b/backstage-spring/techonline-authority/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!--依赖组件引入-->
+        <dependency>
+            <groupId>com.learning</groupId>
+            <artifactId>techonline-util</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
