--- a/backstage-spring/techonline-booter/pom.xml
+++ b/backstage-spring/techonline-booter/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>techonline-authority</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <!--依赖组件引入-->
+        <dependency>
+            <groupId>com.learning</groupId>
+            <artifactId>techonline-util</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
