--- a/backstage-spring/techonline-util/pom.xml
+++ b/backstage-spring/techonline-util/pom.xml
@@ -25,12 +25,22 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!--依赖组件引入-->
+        <dependency>
+            <groupId>com.learning</groupId>
+            <artifactId>techonline-pojo</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 </project>
